Issue #3: Update README.md
Signed-off-by: Nick Mancuso <nmancus1@dtcc.edu>